--- a/src/app/pages/role-configuration/role-configuration.component.css
+++ b/src/app/pages/role-configuration/role-configuration.component.css
@@ -6,3 +6,23 @@
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
 */
+
+mat-card {
+  width: 95%;
+  margin: auto;
+  margin-top: 100px;
+}
+
+h2 {
+  text-align: center;
+}
+
+.container {
+  width: 95%;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+}
+
+.buttonStyle {
+  margin: 5px;
+}
