updated images and header

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -16,7 +16,7 @@
         <!-- Home -->
         <button mat-button class="toolbar__icon-button mat-button" (click)="navHome()">
           <mat-icon>signal_cellular_alt</mat-icon>
-          <span style="margin-left: 5px !important"> <img src="/assets/images/bob-small.png"></span>
+          <span style="margin-left: 5px !important">Bob's Computer Repair Shop</span>
         </button>
         <!-- Service Repair -->
         <button mat-button class="toolbar__icon-button mat-button" (click)="navOrder()">
