updated style stuff

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -15,8 +15,7 @@
       <mat-toolbar-row>
         <!-- Home -->
         <button mat-button class="toolbar__icon-button mat-button" (click)="navHome()">
-          <mat-icon>signal_cellular_alt</mat-icon>
-          <span style="margin-left: 5px !important">Bob's Computer Repair Shop</span>
+          <span><h3>Bob's Computer Repair Shop</h3></span>
         </button>
         <!-- Service Repair -->
         <button mat-button class="toolbar__icon-button mat-button" (click)="navOrder()">
