--- a/src/app/pages/contact-us/contact-us.component.css
+++ b/src/app/pages/contact-us/contact-us.component.css
@@ -8,24 +8,21 @@
 */
 
 .row{
-    padding-top: 100px;
-    padding-left: 10%;
-    padding-right: 10%;
+  padding-top: 100px;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 mat-card {
-text-align: center;
-display: block;
-line-height:22.5px;
-width:89%;
-float: left;
+  text-align: center;
+  display: block;
+  line-height:22.5px;
+  width:89%;
+  float: left;
+  background-color: #ffd180;
 }
 
 ul, li{
     list-style-type: none;
-}
-
-li{
-    color : #e7c661;
-
+    text-align: center;
 }
