--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -9,29 +9,18 @@
 
 <div class="row">
     <mat-card class="col">
-        <h2>Can't open Pandora's Box?  Need your ECHO recorder reset?</h2>
-        <br />
-        <p>We are always open!</p>
-
-    </mat-card>
-    <mat-card class="col">
-        <img src="/assets/images/circles.jpg" style=" width:50%">
-
-        <br />
+        <h2>Can't open Pandora's Box? Need your ECHO recorder reset?</h2>
+        <h4>We are always open!</h4>
         <ul>
-            <li>
-                <h5>Vault 450</h5>
-            </li>
-            <li>
-                <h5>Pandora</h5>
-            </li>
-            <li>
-                <h5>555-0123</h5>
-            </li>
-            <li>
-                <h5>bobscomputershop@teamtaco.com</h5>
-            </li>
-
-        </ul>
+          <li>
+              <h6>Vault 450</h6>
+          </li>
+          <li>
+              <h6>555-0123</h6>
+          </li>
+          <li>
+              <h6>bobscomputershop@teamtaco.com</h6>
+          </li>
+      </ul>
     </mat-card>
 </div>
