--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -22,20 +22,20 @@
 /* For use in src/lib/core/theming/_palette.scss */
 //Blue
 $md-mycolor1: (
-  50: #e3f2fd,
-  100: #bbdefb,
-  200: #90caf9,
-  300: #64b5f6,
-  400: #42a5f5,
-  500: #2196f3,
-  600: #1e88e5,
-  700: #1976d2,
-  800: #1565c0,
-  900: #0d47a1,
-  A100: #82b1ff,
-  A200: #448aff,
-  A400: #2979ff,
-  A700: #2962ff,
+  50: #e8f5e9,
+  100: #c8e6c9,
+  200: #a5d6a7,
+  300: #81c784,
+  400: #66bb6a,
+  500: #4caf50,
+  600: #43a047,
+  700: #388e3c,
+  800: #2e7d32,
+  900: #1b5e20,
+  A100: #b9f6ca,
+  A200: #69f0ae,
+  A400: #00e676,
+  A700: #00c853,
   contrast: (
     50: #000000,
     100: #000000,
@@ -121,7 +121,7 @@ $md-mcgpalette: (
 );
 
 $my-app-primary: mat-palette($md-mycolor2, 200);
-$my-app-accent: mat-palette($md-mycolor1, 600);
+$my-app-accent: mat-palette($md-mycolor1, 200);
 $my-app-warn: mat-palette($md-mcgpalette, 500);
 
 //$my-app-background:    mat-palette($md-mcgpalette2, 200);
