new font and colors. Not complete though

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -18,28 +18,28 @@
         <br />
         <img src="/assets/images/explosion.png" alt="" style=" width:50%">
     </mat-card>
-    
+
     <mat-card class="col" style="text-align: center">
-        <p>In the year 2287 Bob’s Computer Repair Shop began their steps to setup shop in Vault 450.  
-            Robert Ghouls (Bob), his wife, and their kids began to enjoy their new life underground.  
-            Prior to setting up shop, the family had owned a smaller repair station called Echo.  
-            Echo became one of the best known shops known for selling old technology and hardware on 
-            the black market.  </p>
+        <h5>In the year 2287 Bob’s Computer Repair Shop began their steps to setup shop in Vault 450.
+            Robert Ghouls (Bob), his wife, and their kids began to enjoy their new life underground.
+            Prior to setting up shop, the family had owned a smaller repair station called Echo.
+            Echo became one of the best known shops known for selling old technology and hardware on
+            the black market.  </h5>
         <br />
-        <p>What their customers didn’t know was a majority of their sales at that 
-            time came from selling ancient alien technology the family had been collecting over the years 
-            from time travel.  Robert’s wife Lilith was an engineer of her own.  She had created a time 
+        <h5>What their customers didn’t know was a majority of their sales at that
+            time came from selling ancient alien technology the family had been collecting over the years
+            from time travel.  Robert’s wife Lilith was an engineer of her own.  She had created a time
             machine originally to stop the rich from taking all technology for themselves.  Back in 1997
-            just as computers were starting to be relevant, Lilith and her team took to the time line to make 
-            technology open to for all.</p>
+            just as computers were starting to be relevant, Lilith and her team took to the time line to make
+            technology open to for all.</h5>
         <br />
-        <p>As the years came and went, the Ghoul's family's big turning point was the nuclear devastation that 
-            occurred in 2019.  This event was life changing for all of America as everyone was pushed 
-            underground to live in hiding.  Robert and his family began a new strategy to live and 
-            joined the world in becoming technical experts in every field possible.  Lilith became an 
-            expert in robotics and soon was one of the best known mechanics underground.  As word passed 
-            through the millions of vaults, the Ghoul’s family was able to reopen shop.  Being so versed 
-            in old and new technology, the family was able to open Bob’s Computer Repair Shop and strive 
-            for new goals.</p>
+        <h5>As the years came and went, the Ghoul's family's big turning point was the nuclear devastation that
+            occurred in 2019.  This event was life changing for all of America as everyone was pushed
+            underground to live in hiding.  Robert and his family began a new strategy to live and
+            joined the world in becoming technical experts in every field possible.  Lilith became an
+            expert in robotics and soon was one of the best known mechanics underground.  As word passed
+            through the millions of vaults, the Ghoul’s family was able to reopen shop.  Being so versed
+            in old and new technology, the family was able to open Bob’s Computer Repair Shop and strive
+            for new goals.</h5>
     </mat-card>
 </div>
