--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -13,13 +13,13 @@
         <h4>We are always open!</h4>
         <ul>
           <li>
-              <h6>Vault 450</h6>
+              <h5>Vault 450</h5>
           </li>
           <li>
-              <h6>555-0123</h6>
+              <h5>555-0123</h5>
           </li>
           <li>
-              <h6>bobscomputershop@teamtaco.com</h6>
+              <h6>BobsComputerRepairShop@TeamTaco.Com</h6>
           </li>
       </ul>
     </mat-card>
