--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,7 +7,7 @@
 ;===========================================
 -->
 
-<div>
+<div class="navBar">
   <!-- Page header -->
   <header>
     <!-- Navbar -->
