--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -55,20 +55,20 @@ $md-mycolor1: (
 );
 
 $md-mycolor2: (
-  50: #fff3e0,
-  100: #ffe0b2,
-  200: #ffcc80,
-  300: #ffb74d,
-  400: #ffa726,
-  500: #ff9800,
-  600: #fb8c00,
-  700: #f57c00,
-  800: #ef6c00,
-  900: #e65100,
-  A100: #ffd180,
-  A200: #ffab40,
-  A400: #ff9100,
-  A700: #ff6d00,
+  50: #e8f5e9,
+  100: #c8e6c9,
+  200: #a5d6a7,
+  300: #81c784,
+  400: #66bb6a,
+  500: #4caf50,
+  600: #43a047,
+  700: #388e3c,
+  800: #2e7d32,
+  900: #1b5e20,
+  A100: #b9f6ca,
+  A200: #69f0ae,
+  A400: #00e676,
+  A700: #00c853,
   contrast: (
     50: #000000,
     100: #000000,
@@ -120,9 +120,9 @@ $md-mcgpalette: (
   )
 );
 
-$my-app-primary: mat-palette($md-mycolor2, 200);
-$my-app-accent: mat-palette($md-mycolor1, 200);
-$my-app-warn: mat-palette($md-mcgpalette, 500);
+$my-app-primary: mat-palette($md-mycolor2, 900);
+$my-app-accent: mat-palette($md-mycolor1, 700);
+$my-app-warn: mat-palette($md-mcgpalette, 600);
 
 //$my-app-background:    mat-palette($md-mcgpalette2, 200);
 
