--- a/src/styles.css
+++ b/src/styles.css
@@ -15,10 +15,9 @@ html {
 }
 body, p {
   margin: 0;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Bungee', cursive;
 }
 
 h1, h2, h3, h4, h5, h6{
-  font-family: 'Playfair Display SC', serif;
-
+  font-family: 'Bungee', cursive;
 }
