--- a/src/app/pages/role-configuration/role-configuration.component.css
+++ b/src/app/pages/role-configuration/role-configuration.component.css
@@ -11,6 +11,8 @@ mat-card {
   width: 95%;
   margin: auto;
   margin-top: 100px;
+  background-color: #c8e6c9;
+  color: #1b5e20;
 }
 
 h2 {
@@ -19,7 +21,7 @@ h2 {
 
 .container {
   width: 95%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Bungee', cursive;
   margin: 0 auto;
 }
 
