adding homepage content

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,4 +9,55 @@
 
 <body>
     <h1>Welcome!</h1>
+    <section class='home-section'>
+        <ul class='home'>
+            <li class='home-list'>
+                <h2>Our Services</h2>
+                <figure class='home-photo'>
+                    <img src="/assets/images/computer-repair.png" alt="">
+                </figure>
+                <span class='overlay'>
+                    <p>
+                        <a routerLink='/service-repair'>Go to Services Page!</a>
+                    </p>
+                </span>
+            </li>
+            <li class='home-list-1'>
+                <h2>About Us</h2>
+                <figure class='home-photo'>
+                    <img src="/assets/images/about-us.png" alt="">
+                </figure>
+                <span class='overlay'>
+                    <p>
+                        <a routerLink='/session/about-us'>Go to About Us page!</a>
+                    </p>
+                </span>
+            </li>
+            <li class='home-list-2'>
+                <h2>Contact Us</h2>
+                <figure class='home-photo'>
+                    <img src="/assets/images/contact-us.png" alt="">
+                </figure>
+                <span class='overlay'>
+                    <p>
+                        <a routerLink='/session/contact-us'>Go to Contact Us page!</a>
+                    </p>
+                </span>
+            </li>
+        </ul>
+    </section>
+
+
+    <!-- <div class='container'>
+        <h1>Welcome!</h1>
+        <div class='div-1'>
+            <img src="/assets/images/computer-repair.png" alt="">
+        </div>
+        <div class='div-2'>
+            <img src="/assets/images/about-us.png" alt="">
+        </div>
+        <div class='div-3'>
+            <img src="/assets/images/about-us.png" alt="">
+        </div>
+    </div> -->
 </body>
