--- a/src/app/pages/invoice-summary/invoice-summary.component.html
+++ b/src/app/pages/invoice-summary/invoice-summary.component.html
@@ -14,14 +14,41 @@
   <!-- dialog content -->
   <mat-dialog-content>
     <p>Date: {{ invoice.date | date: "medium" }}</p>
-    <p>User ID: {{invoice.user}}</p>
     <br />
     <hr />
-    <h4>Items Ordered</h4>
+    <h4>Items Ordered:</h4>
     <br />
     <div *ngFor="let item of invoice.cart; index as i">
-      <p>{{ item.service }}</p>
-      <p>{{ item.service_price | currency }}</p>
+      <div class="lineItem">
+        <div class="itemName">
+          <p>{{ item.service }}</p>
+        </div>
+        <div class="itemPrice">
+          <p>{{ item.service_price | currency }}</p>
+        </div>
+      </div>
+    </div>
+    <div *ngIf="invoice.addedHours || invoice.addedParts">
+      <br />
+      <h4>Services Ordered:</h4>
+      <div class="lineItem">
+        <div *ngIf="invoice.addedHours">
+          <div class="itemName">
+            <p>Work hours cost</p>
+          </div>
+          <div class="itemPrice">
+            <p>{{ invoice.addHour | currency }}</p>
+          </div>
+        </div>
+        <div *ngIf="invoice.addedParts">
+            <div class="itemName">
+              <p>Additional parts</p>
+            </div>
+            <div class="itemPrice">
+              <p>{{ invoice.addPart | currency }}</p>
+            </div>
+          </div>
+      </div>
     </div>
     <hr />
     <br />
@@ -34,9 +61,9 @@
       mat-raised-button
       color="primary"
       class="closeButton"
-      (click)="close()"
+      (click)="orderConfirmed()"
     >
-      Primary
+      Confirm Order
     </button>
     <button
       mat-raised-button
