--- a/src/app/pages/service-repair/service-repair.component.css
+++ b/src/app/pages/service-repair/service-repair.component.css
@@ -27,6 +27,7 @@ h2 {
     width: 80%;
     height: 100%;
     margin: auto;
+    color: #1b5e20;
 }
 
 
@@ -34,7 +35,10 @@ mat-card {
     display: inline-block;
     min-width: 40%;
     margin: 5px;
-    border: 2px solid black; 
+    border: 2px solid black;
+    background-color: #c8e6c9;
+    color: #1b5e20;
+    font-family: 'Bungee', cursive;
 }
 
 
