--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -15,6 +15,9 @@ h3 {
   font-family: 'Bungee', cursive;
   text-emphasis: bold;
 }
+span {
+  font-family: 'Bungee', cursive;
+}
 
 mat-icon {
   color: #c8e6c9;
