--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -19,22 +19,25 @@
         </button>
         <!-- Service Repair -->
         <button mat-button class="toolbar__icon-button mat-button" (click)="navOrder()">
-          <mat-icon>build</mat-icon>
+          <mat-icon>add_shopping_cart</mat-icon>
+          <span>Service Repair</span>
         </button>
         <!-- About Us -->
         <button mat-button class="toolbar__icon-button mat-button" (click)="navAbout()">
           <mat-icon>face</mat-icon>
+          <span>About Us</span>
         </button>
         <!-- Contact Us -->
         <button mat-button class="toolbar__icon-button mat-button" (click)="navContact()">
           <mat-icon>email</mat-icon>
+          <span>Contact Us</span>
         </button>
 
 
         <div fxFlex></div>
 
         <button mat-icon-button class="toolbar__icon-button" [matMenuTriggerFor]="menu">
-          <mat-icon>view_stream</mat-icon>
+          <mat-icon>settings_applications</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
           <button mat-menu-item (click)="userProfile()">
@@ -42,17 +45,16 @@
             <span>My Profile</span>
           </button>
           <button mat-menu-item (click)="navManagement()">
-            <mat-icon>perm_contact_calendar</mat-icon>
+            <mat-icon>supervised_user_circle</mat-icon>
             <span>User Management</span>
           </button>
           <button mat-menu-item (click)="navRoleConf()">
-            <mat-icon>perm_contact_calendar</mat-icon>
+            <mat-icon>supervisor_account</mat-icon>
             <span>Role Configuration</span>
           </button>
-          <!-- Modied user list to be security questions -->
           <button mat-menu-item (click)="navSecQ()">
-            <mat-icon>lock</mat-icon>
-            <span>Security Questions</span>
+            <mat-icon>help_outline</mat-icon>
+            <span>Security Questions Configuration</span>
           </button>
           <button (click)="logout()" mat-menu-item>
             <mat-icon>exit_to_app</mat-icon>
@@ -61,6 +63,5 @@
         </mat-menu>
       </mat-toolbar-row>
     </mat-toolbar>
-    <!-- endNavbar -->
   </header>
 </div>
