routing for purchase graph

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -56,6 +56,10 @@
             <mat-icon>help_outline</mat-icon>
             <span>Security Questions Configuration</span>
           </button>
+          <button mat-menu-item (click)="navGraph()">
+            <mat-icon>insert_chart_outlined</mat-icon>
+            <span>Purchase Graph</span>
+          </button>
           <button (click)="logout()" mat-menu-item>
             <mat-icon>exit_to_app</mat-icon>
             <span>Logout</span>
