--- a/src/app/pages/error-interceptor/error-interceptor.component.css
+++ b/src/app/pages/error-interceptor/error-interceptor.component.css
@@ -9,8 +9,12 @@
 
 button {
     margin: auto;
+    font-family: 'Bungee', cursive;
+    color: #1b5e20;
 }
 
 h1, p {
     text-align: center;
+    font-family: 'Bungee', cursive;
+    color: #1b5e20;
 }
