--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,6 +2,9 @@
 ============================================
 ; Title: WEB	450	Bob’s	Computer	Repair	Shop
 ; Author: Ethan Townsend, Lea Trueworthy, Natasha Whitmer, and Jason Sullenger
+; Image Links: https://pixabay.com/vectors/person-individually-alone-icon-1824147/
+;              http://www.freestockphotos.biz/stockphoto/15372
+;              http://www.publicdomainfiles.com/show_file.php?id=13973827816404
 ; Date: 17 October 2019
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
@@ -46,18 +49,4 @@
             </li>
         </ul>
     </section>
-
-
-    <!-- <div class='container'>
-        <h1>Welcome!</h1>
-        <div class='div-1'>
-            <img src="/assets/images/computer-repair.png" alt="">
-        </div>
-        <div class='div-2'>
-            <img src="/assets/images/about-us.png" alt="">
-        </div>
-        <div class='div-3'>
-            <img src="/assets/images/about-us.png" alt="">
-        </div>
-    </div> -->
 </body>
