--- a/src/app/pages/purchase-graph/purchase-graph.component.css
+++ b/src/app/pages/purchase-graph/purchase-graph.component.css
@@ -10,10 +10,13 @@
 .container {
   margin: 15px auto;
   width: 55%;
-  /* background-color: #c8e6c9; */
-  /* color: #1b5e20; */
 }
 
 .alignCenter {
   text-align: center;
+}
+
+mat-card {
+  color: #1b5e20;
+  font-family: 'Bungee', cursive;
 }
