--- a/src/app/pages/purchase-graph/purchase-graph.component.html
+++ b/src/app/pages/purchase-graph/purchase-graph.component.html
@@ -14,7 +14,7 @@
           ><h3 class="alignCenter">Purchased Services Graph</h3></mat-card-title
             >
             <mat-card-content>
-                <p-chart type="bar" [data]="data"></p-chart>
+                <p-chart type="bar" [data]="data" [options]="options"></p-chart>
             </mat-card-content>
           <!-- Actions -->
           <mat-card-actions>
